public/fonts/tabler-icons.css
/* Tabler Icons (MIT, see LICENSE-tabler-icons.txt) - self-hosted subset.
   Only the glyph classes used by this app are declared here; the woff2 holds
   the full icon set, so adding an icon = adding one line with its codepoint
   from https://tabler.io/icons (or the full tabler-icons.css). */

@font-face {
  font-family: 'tabler-icons';
  font-style: normal;
  font-weight: 400;
  font-display: block;
  src: url('tabler-icons.woff2') format('woff2');
}

.ti {
  font-family: 'tabler-icons' !important;
  speak: never;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  display: inline-block;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.ti-dice-3::before { content: "\f08d"; }
.ti-tags::before { content: "\ef86"; }
.ti-ban::before { content: "\ea2e"; }
.ti-tornado::before { content: "\ece2"; }
.ti-cards::before { content: "\f510"; }
.ti-trophy::before { content: "\eb45"; }
.ti-confetti::before { content: "\ee46"; }
.ti-crown::before { content: "\ed12"; }
.ti-flame::before { content: "\ec2c"; }
.ti-sparkles::before { content: "\f6d7"; }
.ti-palette::before { content: "\eb01"; }
.ti-history::before { content: "\ebea"; }
.ti-hourglass::before { content: "\ef93"; }
.ti-bolt::before { content: "\ea38"; }
.ti-clock::before { content: "\ea70"; }
.ti-users::before { content: "\ebf2"; }
.ti-user::before { content: "\eb4d"; }
.ti-search::before { content: "\eb1c"; }
.ti-plus::before { content: "\eb0b"; }
.ti-minus::before { content: "\eaf2"; }
.ti-x::before { content: "\eb55"; }
.ti-check::before { content: "\ea5e"; }
.ti-chevron-left::before { content: "\ea60"; }
.ti-chevron-right::before { content: "\ea61"; }
.ti-chevron-down::before { content: "\ea5f"; }
.ti-arrow-right::before { content: "\ea1f"; }
.ti-arrow-left::before { content: "\ea19"; }
.ti-arrow-back-up::before { content: "\eb77"; }
.ti-trash::before { content: "\eb41"; }
.ti-clipboard::before { content: "\ea6f"; }
.ti-photo::before { content: "\eb0a"; }
.ti-pencil::before { content: "\eb04"; }
.ti-refresh::before { content: "\eb13"; }
.ti-home::before { content: "\eac1"; }
.ti-home-heart::before { content: "\f353"; }
.ti-device-gamepad-2::before { content: "\f1d2"; }
.ti-mood-cry::before { content: "\ecbb"; }
.ti-mood-sad::before { content: "\eaf6"; }
.ti-mood-neutral::before { content: "\eaf5"; }
.ti-mood-smile::before { content: "\eaf7"; }
.ti-mood-crazy-happy::before { content: "\ed90"; }
.ti-eye-off::before { content: "\ecf0"; }
.ti-copy::before { content: "\ea7a"; }
.ti-lock::before { content: "\eae2"; }
.ti-mail::before { content: "\eae5"; }
.ti-arrows-shuffle::before { content: "\f000"; }
.ti-medal::before { content: "\ec78"; }
.ti-star::before { content: "\eb2e"; }
.ti-player-play::before { content: "\ed46"; }
.ti-external-link::before { content: "\ea99"; }
.ti-link::before { content: "\eade"; }
.ti-unlink::before { content: "\eb46"; }
.ti-calendar::before { content: "\ea53"; }

